# Firestorm

./: .gitignore  CMakeLists.txt  LICENSE  LL.txt  README.md
example/: generic.fire
include/: ast.hpp  codegen.hpp  custom_exceptions.hpp  frontend.hpp  lexer.hpp  parser.hpp  play.hpp  utility.hpp
include/Firestorm/: ast.hpp  codegen.hpp  custom_exceptions.hpp  frontend.hpp  lexer.hpp  parser.hpp
src/: ast.cpp  codegen.cpp  custom_exceptions.cpp  frontend.cpp  lexer.cpp  main.cpp  parser.cpp  play.cpp
